cabal-version: 2.2
name:
  kafka-metrics
version:
  0.1
synopsis:
  library for logging kafka metrics
description:
  library for logging kafka metrics
homepage:
  https://github.com/layer-3-communications/kafka-metrics
bug-reports:
  https://github.com/layer-3-communications/kafka-metrics/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data,Utility,Logging,Testing,Development
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

library
  hs-source-dirs:
    src
  exposed-modules:
    Kafka.Metrics
  build-depends:
    , base >= 4.11 && < 4.14
    , bytestring >= 0.10 && < 0.11
    , kafka
    , primitive >= 0.6.4 && < 0.8
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/layer-3-communications/kafka-metrics.git
